Fixed JS secure link submit by calling .onsubmit rather than submit Added current_element to be a shortcut to $(this) for json_complete JS because $(this) is broken inside the function def Fixed layering of thumbnail icon overlay Added function to base to see the state of C is required in debugging

--- a/src/civicboom/public/styles/common/avatars.css
+++ b/src/civicboom/public/styles/common/avatars.css
@@ -43,5 +43,10 @@
 	-webkit-border-radius: 0.075em;
 }
 
+.thumbnail .icons {
+    position: absolute;
+    z-index: 2;
+}
+
 HTML.ie .thumbnail {border: 1px solid #888;}
 HTML.ie .thumbnail.thumbnail_large {border: 2px solid #888;}
